<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, EventPlannerActivity!</string>
    <string name="app_name">Giraffe</string>
    <string name="app_about">Giraffe is a personal conference schedule planner for Android.\n\n2011–2016 © Andreas Gohr\nsplitbrain.org/go/giraffe</string>
    <string name="app_usage">Usage:\n\n1. Choose &quot;iCal Url&quot; from the options menu.\n2. Enter the URL to an .ics iCal file.\n3. Click (re)load data.\n\nSessions can be marked as favorite by clicking the Giraffe icon. Session details are available by a click on its name. Use the icons at the top to filter for favorites and future sessions only.</string>
    <string name="opt_info">Enter the iCal URL of the conference schedule in the field above.</string>
    <string name="opt_url">iCal URL:</string>
    <string name="opt_refresh">(re)load data</string>
    <string name="menu_urlsetup">iCal URL</string>
    <string name="menu_about">About</string>
    <string name="filter0">now showing all sessions</string>
    <string name="filter1">now showing favorite sessions</string>
    <string name="filter2">now showing current/future sessions</string>
    <string name="filter3">now showing favorite, current/future sessions</string>
    <string name="opt_barcode">Scan Barcode</string>
    <string name="opt_zxing_title">Barcode Scanner Not Found</string>
    <string name="opt_zxing_text">We were unable to find the barcode scanner app, which is required to scan barcodes. Do you want to download it now?</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="url_market_zxing">market://details?id=com.google.zxing.client.android</string>
    <string name="url_web_zxing">https://code.google.com/p/zxing/downloads/detail?name=BarcodeScanner4.0.apk&amp;can=2</string>
    <string name="opt_error_bad_url">Invalid URL given.</string>
    <string name="opt_barcode_ok">Barcode data retrieved.</string>
    <string name="opt_error_no_url">No URL found.</string>
    <string name="opt_barcode_fail">Unable to retrieve barcode data. Please try again.</string>
    <string name="opt_ignoressl">Do not verify SSL certificates</string>
    <string name="main_no_feed_title">No Schedule Feed Found</string>
    <string name="main_no_feed_text">It appears that no schedule feed is loaded. Would you like to load one now?</string>
    <string name="toggle_favorite">Toggle Favorite</string>
    <string name="time_filter">Time Filter</string>
    <string name="favorite_filter">Favorite Filter</string>
    <string name="bookmark">Bookmark</string>
    <string name="about">About</string>
    <string name="options">Options</string>
</resources>
